<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login">


    <android.support.constraint.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@drawable/ic_launcher_background"
        android:gravity="center"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="323dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="294dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="209dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/firstName"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"

                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="266dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/lastName"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"

                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="45dp"
            tools:layout_editor_absoluteY="380dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@android:color/white" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_up_button"
            style="?android:textAppearanceSmall"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:text="@string/action_createAccount"
            android:textColor="#151B54"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="131dp"
            tools:layout_editor_absoluteY="460dp" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="154dp"
            android:layout_height="198dp"
            app:srcCompat="@drawable/ic_dashboard_black_24dp"
            tools:layout_editor_absoluteX="115dp"
            tools:layout_editor_absoluteY="2dp" />


        <!-- Link to Login Screen -->


    </android.support.constraint.ConstraintLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />





</android.support.constraint.ConstraintLayout>