<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings">

    <Button
        android:id="@+id/settings"
        android:layout_width="250dp"
        android:layout_height="75dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="81dp"
        android:layout_marginBottom="9dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/settings"
        android:textAlignment="center"
        android:textColor="@color/darkGrey"
        android:textSize="50dp"
        app:layout_constraintBottom_toTopOf="@+id/contact_us"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_us" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/change_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/faq" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/add_or_remove_bank_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/change_email" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_or_remove_bank_account" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintBottom_toTopOf="@+id/droplet_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="407dp"
        android:layout_height="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/droplet_settings" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="400dp"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/contact_us"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/faq"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/change_email"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_or_remove_bank_account"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="5dp"
        android:layout_marginBottom="10dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/about"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/arrow"
        android:layout_width="65dp"
        android:layout_height="50dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/arrow"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="340dp"
        tools:layout_editor_absoluteY="475dp"
        tools:text="@string/arrow" />

    <Button
        android:id="@+id/about"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/about"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="400dp"
        tools:text="@string/about" />

    <Button
        android:id="@+id/contact_us"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="9dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/contact_us"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textFontWeight="1000"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <Button
        android:id="@+id/faq"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/faq_"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/change_email"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/change_email"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="250dp" />

    <Button
        android:id="@+id/add_or_remove_bank_account"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/add_or_remove_bank_account"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/droplet_settings"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:background="@color/grey"
        android:fontFamily="@font/montserrat"
        android:text="@string/droplet_settings"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/arrow"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="475dp" />

</android.support.constraint.ConstraintLayout>